@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/euler/Attic/euler-1.60.6-r1.ebuild,v 1.8 2004/07/02 19:52:13 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/euler/Attic/euler-1.60.6-r1.ebuild,v 1.9 2004/12/13 14:28:33 phosphan Exp $
 
 inherit eutils
 IUSE=""
@@ -15,7 +15,7 @@ SRC_URI="mirror://sourceforge/euler/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~sparc amd64"
+KEYWORDS="x86 ~ppc ~sparc amd64"
 
 DEPEND="virtual/libc
 	virtual/x11
