@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/kalamaris/Attic/kalamaris-0.7.1.ebuild,v 1.3 2004/07/25 18:57:50 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/kalamaris/Attic/kalamaris-0.7.1.ebuild,v 1.4 2004/12/13 14:32:19 phosphan Exp $
 
 inherit kde
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://developer.kde.org/~larrosa/kalamaris.html"
 SRC_URI="http://developer.kde.org/~larrosa/bin/${P}.tar.bz2"
 LICENSE="GPL-2"
 
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="x86 ~ppc"
 
 DEPEND="dev-libs/gmp"
 need-kde 3
