@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/octave-forge/Attic/octave-forge-2004.02.12.ebuild,v 1.5 2004/06/24 22:13:13 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/octave-forge/Attic/octave-forge-2004.02.12.ebuild,v 1.6 2004/12/13 14:34:16 phosphan Exp $
 
 inherit eutils
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://octave.sourceforge.net/"
 SRC_URI="mirror://sourceforge/octave/${P}.tar.gz"
 
 LICENSE="as-is"
-KEYWORDS="~x86 ~ppc ~sparc amd64"
+KEYWORDS="x86 ~ppc ~sparc amd64"
 SLOT="0"
 IUSE="ginac qhull"
 
