@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/euler
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/euler/Attic/ChangeLog,v 1.14 2004/07/02 19:52:13 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/euler/Attic/ChangeLog,v 1.15 2004/12/13 14:28:33 phosphan Exp $
+
+  13 Dec 2004; Patrick Kursawe <phosphan@gentoo.org> euler-1.60.6-r1.ebuild:
+  Stable for x86
 
   02 Jul 2004; Patrick Kursawe <phosphan@gentoo.org> euler-1.59.1.ebuild,
   euler-1.60.6-r1.ebuild, euler-1.60.6.ebuild,
